// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reminder renders correctly when bordered 1`] = `
<DocumentFragment>
  .cache-1rue1dw {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: transparent;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-1rue1dw.cache-1rue1dw {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1rue1dw:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 3px 6px #e1ebff;
  border: 1px solid #3f6ed8;
}

.cache-1rue1dw strong {
  color: #3f6ed8;
}

.cache-kwaek9>p {
  display: inline;
}

.cache-ryfcqw {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ryfcqw.cache-ryfcqw {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1rue1dw"
    type="button"
  >
    <div
      class="ejtitxs0 cache-kwaek9"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-ryfcqw"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with bold 1`] = `
<DocumentFragment>
  .cache-1rue1dw {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: transparent;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-1rue1dw.cache-1rue1dw {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1rue1dw:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 3px 6px #e1ebff;
  border: 1px solid #3f6ed8;
}

.cache-1rue1dw strong {
  color: #3f6ed8;
}

.cache-kwaek9>p {
  display: inline;
}

.cache-ryfcqw {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ryfcqw.cache-ryfcqw {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1rue1dw"
    type="button"
  >
    <div
      class="ejtitxs0 cache-kwaek9"
    >
      <p>
        <span>
          This is a 
        </span>
        <strong>
          <span>
            bold
          </span>
        </strong>
        <span>
           Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-ryfcqw"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-29nmii {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #e1ebff;
  border: 1px solid transparent;
  color: #4a4f62;
}

.cache-29nmii.cache-29nmii {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-29nmii:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 3px 6px #e1ebff;
  border: 1px solid #3f6ed8;
}

.cache-29nmii strong {
  color: #3f6ed8;
}

.cache-kwaek9>p {
  display: inline;
}

.cache-ryfcqw {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ryfcqw.cache-ryfcqw {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-29nmii"
    type="button"
  >
    <div
      class="ejtitxs0 cache-kwaek9"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-ryfcqw"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with variant 1`] = `
<DocumentFragment>
  .cache-1rue1dw {
  height: 28px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 400;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: transparent;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-1rue1dw.cache-1rue1dw {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1rue1dw:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0 3px 6px #e1ebff;
  border: 1px solid #3f6ed8;
}

.cache-1rue1dw strong {
  color: #3f6ed8;
}

.cache-kwaek9>p {
  display: inline;
}

.cache-ryfcqw {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ryfcqw.cache-ryfcqw {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="e1fipqsu0 cache-1rue1dw"
    type="button"
  >
    <div
      class="ejtitxs0 cache-kwaek9"
    >
      <p>
        <span>
          This is a sample Test
        </span>
      </p>
    </div>
    <svg
      class="sc-ui-icon etwatq50 cache-ryfcqw"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;
